[tool.poetry]
name = "kitty_bot"
version = "0.0.1"
description = "Telegram bot which sends cat and dog pictures on demand"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.20.0.post0"
httpx = "^0.28.1"
starlette = "^0.46.2"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
