[project]
name = "kitty_bot"
version = "0.2.1"
description = "Telegram bot which sends cat and dog pictures on demand"
authors = [{ name = "NovaHFly", email = "mugiviska@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "aiogram>=3.20.0.post0,<4",
    "httpx>=0.28.1,<0.29",
    "starlette>=0.46.2,<0.47",
    "uvicorn>=0.34.2,<0.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
